# openweather-elt

./: .env.example  Dockerfile  LICENSE  README.md  docker-compose.override.yml  main.py  pyproject.toml  requirements.txt
.astro/: config.yaml
dags/: openweather_elt.py
include/dbt/openweather/: dbt_project.yml  profiles.yml
include/dbt/openweather/models/: sources.yml
include/dbt/openweather/models/bronze/: stg_current_weather.sql  stg_forecast.sql
include/dbt/openweather/models/gold/: dim_city.sql  dim_datetime.sql  fct_current_weather.sql  fct_forecast.sql  schema.yml
include/dbt/openweather/models/silver/: slv_current_weather.sql  slv_forecast.sql
include/pipelines/: capitals.py  openweather.py
