[project]
name = "openweather-elt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbt>=1.0.0.40.17",
    "dbt-postgres>=1.10.0",
    "dlt[postgres]>=1.27.2",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "setuptools>=82.0.1",
]
